--- a/index.jade
+++ b/index.jade
@@ -76,6 +76,7 @@ html(lang="en")
       h2.custom Fried Virtual Chicken
     +stage(9, [['Titillium Web', 'https://www.google.com/fonts/specimen/Titillium+Web']])
       h2 Dick Chocolate
+      p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ducimus ipsa, nulla ipsum ad dolor modi tempore harum quibusdam alias maxime impedit cumque aliquam dolore necessitatibus provident maiores! Quasi, soluta.
 
 
 
