Changed title, description, added stage 10

--- a/index.jade
+++ b/index.jade
@@ -22,10 +22,12 @@ html(lang="en")
 
     .cover
       .title
-        h1.custom Typography <br> on the Web
+        h1.custom Web Typography
         h2 A showcase using the Google Font Library
       .content
-        p Being resourceful is a skill every designer should possess. While not always true, this project aims to explore the possibilties of type on the web. <a href="http://letteringjs.com/">Lettering.js</a> was used to achieve editorial style titling.
+        p
+        | This showcase is not necessarily about font pairings as that is subjective to designers or viewers, but an area to explore what can be done with Google's selection.
+        | <a href="http://letteringjs.com/">Lettering.js</a> was used to achieve editorial style titles.
 
     header.header
       button#smooth-btn Font Smoothing
@@ -50,7 +52,7 @@ html(lang="en")
       p  We don’t have a diversity problem. We have a racism problem, and a sexism problem.
 
 
-    +stage(4, [['Archivo Black', 'https://www.google.com/fonts/specimen/Archivo+Black'], ['Archivo Narrow', 'https://www.google.com/fonts/specimen/Archivo+Narrow']])
+    +stage(4, [['Archivo Black', 'https://www.google.com/fonts/specimen/Archivo+Black'], ['Merriweather', 'https://www.google.com/fonts/specimen/Merriweather']])
       h2 William Gibson
       h3 Godfather of Science Fiction
       .entry
@@ -73,12 +75,15 @@ html(lang="en")
       h2 Mallarmé’s Preface of 1897
       p ‘I would prefer that this Note was not read, or, skimmed, was forgotten; it tells the knowledgeable reader little that is beyond his or her penetration: but may confuse the uninitiated, prior to their looking at the first words of the Poem, since the ensuing words, laid out as they are, lead on to the last, with no novelty except the spacing of the text. The ‘blanks’ indeed take on importance, at first glance; the versification demands them, as a surrounding silence, to the extent that a fragment, lyrical or of a few beats, occupies, in its midst, a third of the space of paper: I do not transgress the measure, only disperse it. The paper intervenes each time as an image, of itself, ends or begins once more, accepting a succession of others, and, since, as ever, it does nothing, of regular sonorous lines or verse – rather prismatic subdivisions of the Idea, the instant they appear, and as long as they last, in some precise intellectual performance, that is in variable positions, nearer to or further from the implicit guiding thread, because of the verisimilitude the text imposes. The literary value, if I am allowed to say so, of this print-less distance which mentally separates groups of words or words themselves, is to periodically accelerate or slow the movement, the scansion, the sequence even, given one’s simultaneous sight of the page: the latter taken as unity, as elsewhere the Verse is or perfect line. Imagination flowers and vanishes, swiftly, following the flow of the writing, round the fragmentary stations of a capitalised phrase introduced by and extended from the title. Everything takes place, in sections, by supposition; narrative is avoided. In addition this use of the bare thought with its retreats, prolongations, and flights, by reason of its very design, for anyone wishing to read it aloud, results in a score. The variation in printed characters between the dominant motif, a secondary one and those adjacent, marks its importance for oral utterance and the scale, mid-way, at top or bottom of the page will show how the intonation rises or falls.  (Only certain very bold instructions of mine, encroachments etc. forming the counterpoint to this prosody, a work which lacks precedent, have been left in a primitive state: not because I agree with being timid in my attempts; but because it is not for me, save by a special pagination or volume of my own, in a Periodical so courageous, gracious and accommodating as it shows itself to be to real freedom, to act too contrary to custom.  I will have shown, in the Poem below, more than a sketch, a ‘state’ which yet does not entirely break with tradition; will have furthered its presentation in many ways too, without offending anyone; sufficing to open a few eyes.  This applies to the 1897 printing specifically: translator’s note.) Today, without presuming anything about what will emerge from this in future, nothing, or almost a new art, let us readily accept that the tentative participates, with the unforeseen, in the pursuit, specific and dear to our time, of free verse and the prose poem. Their meeting takes place under an influence, alien I know, that of Music heard in concert; one finds there several techniques that seem to me to belong to Literature, I reclaim them. The genre, which is becoming one, like the symphony, little by little, alongside personal poetry, leaves intact the older verse; for which I maintain my worship, and to which I attribute the empire of passion and dreams, though this may be the preferred means (as follows) of dealing with subjects of pure and complex imagination or intellect: which there is no remaining justification for excluding from Poetry – the unique source.’
     +stage(8, [['Lato', 'https://www.google.com/fonts/specimen/Lato']])
-      h2.custom Fried Virtual Chicken
+      h2.words Fried Virtual Chicken
     +stage(9, [['Titillium Web', 'https://www.google.com/fonts/specimen/Titillium+Web']])
       h2 Dick Chocolate
       p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ducimus ipsa, nulla ipsum ad dolor modi tempore harum quibusdam alias maxime impedit cumque aliquam dolore necessitatibus provident maiores! Quasi, soluta.
 
-
+    +stage(10, [['Rubik Mono One', 'https://www.google.com/fonts/specimen/Rubik+Mono+One'],['Varela', 'https://www.google.com/fonts/specimen/Varela']])
+      //- h2.letters Giants
+      .entry
+        p Every of the most controversial music stories of the year just got a bit more drama added to the fray: A U.S. federal judge has ruled that Robin Thicke's "Blurred Lines" won't be going anywhere, denying Marvin Gaye's family's request for an injunction to block the sale and distribution of the song. The family will, however, still enjoy a 50 percent rate for future royalties on the song. In March, a jury found Thicke and Pharrell Williams liable for copyright infringement, awarding Gaye's family $7.4 million in their verdict. U.S. District Judge John Kronstadt has now decided that Thicke and Pharrell won't get the new trial they requested, but they will have to pay significantly less. The judge has reduced the jury's original verdict to $5.3 million, with Pharrell now owing about $358,000 of his profits.
 
 
     footer.footer
