--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -13,8 +13,15 @@ $susy: (columns: $total-columns,gutters: $gutter-width / $column-width, column-w
 $base-line-height: 28px
 
 $base-font-color: #000
-$base-background-color: #eee
+$base-background-color: #fff
 $headerColor: #000
+
+
+=font-family($font, $serif: false)
+  @if $serif
+    font-family: $font, serif
+  @else
+    font-family: $font, sans-serif
 
 .wf-active body, .wf-inactive body
   opacity: 1
@@ -23,7 +30,7 @@ $headerColor: #000
 
 body
   opacity: 0
-  font-family: 'Open Sans'
+  +font-family('Open Sans')
   color: $base-font-color
   background: $base-background-color
   +font-size(20px)
@@ -84,7 +91,8 @@ h1, h2, h3, h4
 
 $caption-color: #333
 ul.caption
-  font-family: 'Open Sans', sans-serif
+  +font-family('Open Sans')
+  // font-family: 'Open Sans', sans-serif
   +font-size(12px)
   margin: 0
   position: absolute
@@ -96,7 +104,7 @@ ul.caption
   &:before
     font-family: 'Chivo', sans-serif
     font-weight: 400
-    margin-right: gutter()
+    margin: 0
     +font-size(20px)
     color: $caption-color
     content: counter(caption-counter)
@@ -146,7 +154,7 @@ ul.caption
   +font-size(18px)
   background: #FDF7BA
   color: #292327
-  font-family: 'Jacques Francois', serif
+  +font-family('Jacques Francois', false)
   +respond-to(tablet)
     .title
       +span(4)
@@ -218,10 +226,6 @@ ul.caption
 .stage-4
   background: #0c0c0c
   color: white
-
-  .custom .word2
-    font-family: 'Playfair Display', serif
-    +font-size(64px)
   h2
     font-family: 'Archivo Black', sans-serif
     text-align: center
@@ -343,6 +347,30 @@ ul.caption
     +respond-to(tablet)
       +squish(2)
     color: #fff
+
+//================================
+// Stage 10
+//================================
+.stage-10
+  +font-size(16px)
+  .entry
+    font-family: 'Varela Round'
+
+  +respond-to(tablet)
+    .entry
+      color: #004532
+      +font-size(22px)
+      +line-height(32px)
+      +squish(3)
+      p:first-of-type:first-letter
+        +font-size(196px)
+        color: #CAA33C
+        float: left
+        font-family: 'Rubik Mono One', sans-serif
+        height: 0.7em
+        line-height: 0.85em
+        margin: 0 0 -0.05em 0
+        padding: 0 0.1em 0 0
 
 @media only screen and (min-width: 768px)
   body
