--- a/index.jade
+++ b/index.jade
@@ -86,6 +86,9 @@ html(lang="en")
       .entry
         p Every of the most controversial music stories of the year just got a bit more drama added to the fray: A U.S. federal judge has ruled that Robin Thicke's "Blurred Lines" won't be going anywhere, denying Marvin Gaye's family's request for an injunction to block the sale and distribution of the song. The family will, however, still enjoy a 50 percent rate for future royalties on the song. In March, a jury found Thicke and Pharrell Williams liable for copyright infringement, awarding Gaye's family $7.4 million in their verdict. U.S. District Judge John Kronstadt has now decided that Thicke and Pharrell won't get the new trial they requested, but they will have to pay significantly less. The judge has reduced the jury's original verdict to $5.3 million, with Pharrell now owing about $358,000 of his profits.
 
+    +stage(11, [['Ultra'], ['Stint Ultra Expanded'], ['Stint Ultra Condensed']])
+      h2 Denim Care Guide
+      h3 A guide to properly care for your raw selvedge denim jeans
 
     footer.footer
       p <strong>Fork this repo on Github</strong> or <strong>Follow me on Twitter</strong>
