--- a/_sass/all.sass
+++ b/_sass/all.sass
@@ -57,7 +57,6 @@ h1, h2, h3, h4
 //
 //------------------------------------------------------------
 
-
 .cover
   overflow: hidden
   +container()
@@ -66,12 +65,12 @@ h1, h2, h3, h4
     text-align: center
     h1
       font-family: 'Archivo Black', sans-serif
-      // text-transform: uppercase
-      font-size: modular-scale(0)
-      line-height: 64px
+      font-size: modular-scale(8)
   +breakpoint(tablet)
+    h1.custom
+      font-size: modular-scale(22)
     .content
-      +squish(4)
+      +squish(3)
 
 .header
   top: 0
@@ -85,7 +84,6 @@ h1, h2, h3, h4
   text-align: center
   padding: spacing(2) 0
 
-
 ul.caption
   +font-family('Open Sans')
   font-size: modular-scale(-8)
@@ -95,7 +93,7 @@ ul.caption
   top: 0
   text-align: center
   list-style: none
-  padding: spacing(1) 0
+  padding: spacing(2) 0
   &:before
     font-family: 'Chivo', sans-serif
     font-weight: 400
@@ -115,6 +113,8 @@ ul.caption
     &::after
       content: " / "
       color: $caption-color
+      padding-left: 0.25em
+      padding-right: 0.25em
     &:last-child
       &::after
         content: none
@@ -124,12 +124,13 @@ ul.caption
   +display(flex)
   +flex-direction(column)
   +justify-content(center)
+  box-size: border-box
   counter-increment: caption-counter
   max-width: 100vw
-  min-height: calc(100vh - spacing(4))
+  min-height: calc(100vh)
   overflow: hidden
-  padding-bottom: spacing(1)
-  padding-top: (spacing(1) * 3)
+  padding-bottom: spacing(2)
+  padding-top: spacing(3)
   position: relative
 .content
   +container()
@@ -208,27 +209,27 @@ ul.caption
       line-height: 56px
       +squish(2)
 
-//================================
-// Stage 4
-//================================
+//------------------------------------------------------------
+//
+//  Stage 4
+//
+//------------------------------------------------------------
 
 .stage-4
   background: #0c0c0c
   color: white
-  h2
-    font-family: 'Archivo Black', sans-serif
-    text-align: center
-
   .content
     // font-family: 'Archivo Narrow', sans-serif
     font-family: 'Merriweather', serif
-    font-size: modular-scale(0)
-
+    font-size: modular-scale(-4)
+    h2
+      font-family: 'Archivo Black', sans-serif
+      text-align: center
   +breakpoint(tablet)
 
     h2
       font-family: 'Archivo Black', sans-serif
-      font-size: modular-scale(0)
+      font-size: modular-scale(24)
       line-height: 100px
       // border-bottom: 20px solid
       // display: inline-block
@@ -278,17 +279,15 @@ ul.caption
   color: #030032
   h2
     font-family: 'Sorts Mill Goudy', serif
-    // text-transform: uppercase
     font-weight: 500
-    // letter-spacing: 0.09em
     font-size: modular-scale(0)
     line-height: 56px
     text-align: center
 
   +breakpoint(tablet)
     h2
-      font-size: modular-scale(0)
-      line-height: 136px
+      font-size: modular-scale(32)
+      line-height: modular-scale(0)
       text-align: left
     .content
       font-family: 'Archivo Narrow', sans-serif
@@ -319,16 +318,18 @@ ul.caption
       font-weight: 400
     .word3
       font-weight: 900
-//================================
-// Stage 9
-//================================
+
+//------------------------------------------------------------
+//
+//  Stage 9
+//
+//------------------------------------------------------------
 
 .stage-9
   background: #ba9359
   h2
     text-align: center
     color: #E44440
-    font-size: modular-scale(0)
     font-weight: 900
     font-family: 'Titillium Web', sans-serif
     +breakpoint(tablet)
@@ -337,7 +338,9 @@ ul.caption
     +breakpoint(tablet)
       +squish(2)
     color: #fff
-
+  +breakpoint(tablet)
+    h2
+      font-size: modular-scale(24)
 //================================
 // Stage 10
 //================================
@@ -362,9 +365,12 @@ ul.caption
         margin: 0 0 -0.05em 0
         padding: 0 0.1em 0 0
 
-//================================
-// Stage 11
-//================================
+//------------------------------------------------------------
+//
+//  Stage 11
+//
+//------------------------------------------------------------
+
 
 .stage-11
   background: #eee
@@ -377,10 +383,10 @@ ul.caption
 
   +breakpoint(tablet)
     h2
-      font-size: modular-scale(0)
+      font-size: modular-scale(18)
       letter-spacing: 0.05em
     h3
-      font-size: modular-scale(0)
+      font-size: modular-scale(10)
 
 //================================
 // Stage 12
@@ -403,7 +409,8 @@ ul.caption
 
 .stage-13
   font-family: 'Hanalei'
-  font-size: 5rem
+  .content
+    font-size: 5rem
 
 @media only screen and (min-width: 768px)
   body
